--- a/src/main/resources/templates/types/dsTypes.html
+++ b/src/main/resources/templates/types/dsTypes.html
@@ -9,74 +9,48 @@
 	<div layout:fragment="header"></div>
 
 	<div layout:fragment="content">
-
+	
 		<div class="row">
-			<aside class="col-sm-2">
-				<div class="card poly-cart">
-					<div class="card-body">
-						<div class="row">
-							<form th:action="@{/types/find}" method="post" class="input-group input-group-sm mt-auto" style="width: 200px;">
-                            <div class="input-group input-group-sm">
-                                <input type="text" name="ten" class="form-control float-right" placeholder="Search">
-                                <div class="input-group-append">
-                                    <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                                </div>
-                            </div>
-                        </form>
-
-						</div>
-					</div>
-				</div>
-				<div class="card poly-cart" data-toggle="collapse" href="#chungloai">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Danh Mục
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="chungloai">
-					<a th:href="@{/users/}" class="list-group-item">Tài Khoản</a>
-					<a th:href="@{/citys/}" class="list-group-item ">Thành Phố</a>
-					<a th:href="@{/types/}" class="list-group-item ">Loại Khách Sạn</a>
-					<a th:href="@{/hotels/}" class="list-group-item ">Khách Sạn</a>
-					<a th:href="@{/services/}" class="list-group-item ">Dịch Vụ</a>
-					<a th:href="@{/rooms/}" class="list-group-item ">Phòng</a>
-
-				</ul>
-				<div class="card poly-cart" data-toggle="collapse" href="#nguoidung">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Người Dùng
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="nguoidung">
-					<li class="list-group-item "><i class="fas fa-user"></i> Tài
-						Khoản</li>
-					<li class="list-group-item "><i class="fas fa-cogs"></i> Chưa
-						Nghĩ Ra</li>
-					<a class="list-group-item " th:href="@{/logout}" th:if="${attr_user != null}"><i class="fas fa-sign-out-alt"></i>
-						Đăng Xuất</a>
-
-				</ul>
-			</aside>
-			<article class="col-sm-10">
+			
+			<article class="col-sm-12">
 				<div class="card">
 					<div class="card-header">
 						<div th:if="${success}"
 							class="row alert alert-success alert-dismissible">
 							<button type="button" class="close" data-dismiss="alert"
 								aria-label="Close">
-								<span aria-hidden="true">×</span>
+								<span aria-hidden="true">X</span>
 							</button>
 							<span th:text="${success}"></span>
 						</div>
-						<span type="button" class="float-right btn btn-primary btn-sm"
-							data-toggle="modal" data-target="#modelId"> <i
-							class="fas fa-plus" th:href="@{/types/}"></i> Them Moi
+						<span class="float-left"
+							style="color: snow; display: table-cell; font-size: 26px; font-weight: 700; margin: 0; vertical-align: middle">
+							Quản Lý Loại Khách Sạn </span>
+						<form th:action="@{/types/find}" method="post"
+							class="input-group float-left input-group-sm "
+							style="width: 500px; margin-left:200px; padding: 10px">
+								
+							<div class="input-group float-left input-group-sm">
+								<input  type="text" name="ten" class="form-control float-right"
+									placeholder="Search" >
+								<div class="input-group-append">
+									<button type="submit" class="btn btn-default">
+										<i class="fas fa-search"></i>
+									</button>
+								</div>
+							</div>
+						</form>
+						<span type="button" class="float-right btn  btn-sm"
+							data-toggle="modal" data-target="#modelId">  
+							<input type="submit" value="Thêm Mới" class="btn btn-primary"
+												th:if="${id<=0}" /> 
+							<input type="submit" value="Chỉnh Sửa"
+												class="btn btn-primary" th:if="${id>0}" /> 
 						</span>
 						<!-- Modal -->
 						<div class="modal fade" id="modelId" tabindex="-1" role="dialog"
 							aria-labelledby="modelTitleId" aria-hidden="true">
-							<div class="modal-dialog" style="max-width: 700px"
+							<div class="modal-dialog" style="max-width: 700px;margin-top: 200px"
 								role="document">
 
 								<div class="modal-content">
@@ -84,7 +58,7 @@
 										<div th:if="${message !=null}">
 											<h3 th:text="${message}"></h3>
 										</div>
-										<h5 class="modal-title">Thêm Thành Phố</h5>
+										<h5 class="modal-title">Loại Khách Sạn</h5>
 										<button type="button" class="close" data-dismiss="modal"
 											aria-label="Close">
 											<span aria-hidden="true">&times;</span>
@@ -101,35 +75,35 @@
 													<label class="col-sm-3 col-form-label"> Mã</label>
 													<div class="col-sm-9">
 														<input type="text" th:field="*{id}" class="form-control"
-															placeholder="Mã Thành Phố" readonly>
+															placeholder="MÃ£ ThÃ nh Phá»" readonly>
 													</div>
 												</div>
 											</div>
 
 											<div class="form-group row">
-												<label class="col-sm-3 col-form-label">Tên Loại
-													Khách Sạn</label>
+												<label class="col-sm-3 col-form-label">Tên Loại Khách Sạn</label>
 												<div class="col-sm-9">
 													<input type="text" th:field="*{ten}" class="form-control"
-														placeholder="Tên Loại Khách sạn...">
+														placeholder="Tên Loại Khách Sạn...">
 												</div>
 											</div>
 
 											<div class="form-group row">
 												<label class="col-sm-3"> Hình Ảnh</label>
-												<div class="col-sm-9">
+												<div class="col-sm-8" style="margin-left: 15px">
 													<input type="file" class="custom-file-input" th:field="*{photo}" id="photo" th:required="*{id == 0}">
                                         <label class="custom-file-label" for="photo" th:if="*{imageName}" th:text="*{imageName}"></label>
                                         <label class="custom-file-label" for="photo" th:unless="*{imageName}">choose image</label>
 												</div>
 											</div>
-											<div class="row" style="margin: 5px;">
-												<div class="form-group col-sm-12">
-													<label for="validationTextarea">Mô Tả</label>
+											<div class="form-group row">
+													<label  class="col-sm-3" for="validationTextarea">Mô Tả</label>
+													<div class="col-sm-9" >
 													<textarea rows="4" class="form-control"
 														id="validationTextarea"
 														placeholder="Required example textarea" th:field="*{mota}">
                                                     </textarea>
+                                                    
 												</div>
 											</div>
 
@@ -156,28 +130,28 @@
 					</div>
 
 					<table class="table table-bordered"
-						style="margin-bottom: 0; width: 1100px">
+						>
 						<thead class="text-center">
 							<tr>
 								<th style="width: 10px">Mã</th>
 								<th>Tên Loại Khách Sạn</th>
-								<th>Mô tả</th>
-								<th>Hình ảnh</th>
-								<th>Hành động</th>
+								<th>Mô Tả</th>
+								<th>Hình Ảnh</th>
+								<th>Hành Động</th>
 							</tr>
 
 						</thead>
 						<tbody>
-							<tr th:each="item: ${types}">
+							<tr  th:each="item: ${types}">
 								<td th:text="${item.id}"></td>
 								<td th:text="${item.ten}"></td>
 								<td th:text="${item.mota}"></td>
-								<td><img alt="" th:src="@{'/getImage/' +${item.id}}"
+								<td class="text-center"><img alt="" th:src="@{'/getImage/' +${item.id}}"
 									width="100" height="70" class="avatar"
 									style="border-radius: 40px; vertical-align: middle;"></td>
-								<td class="text-right py-0 align-middle">
+								<td class="text-center py-0 align-middle">
 									<div class="btn-group btn-group-sm">
-										<a th:href="@{'/types/edit/' + ${item.id}}"
+										<a th:href="@{'/types/edit/' + ${item.id}}" 
 											class="btn btn-primary"><i class="fas fa-pencil-alt"></i></a>
 										<a th:href="@{'/types/delete/' + ${item.id}}"
 											class="btn btn-danger"><i class="fas fa-trash"></i></a>
