--- a/src/main/resources/templates/Hotel/dsKhachsan.html
+++ b/src/main/resources/templates/Hotel/dsKhachsan.html
@@ -9,59 +9,10 @@
 	<div layout:fragment="header"></div>
 	
 	<div layout:fragment="content">
+	
 		<div class="row">
-			<aside class="col-sm-2">
-				<div class="card poly-cart">
-					<div class="card-body">
-						<div class="row">
-							<form th:action="@{/hotels/find}" method="post" class="input-group input-group-sm mt-auto" style="width: 200px;">
-                            <div class="input-group input-group-sm">
-                                <input type="text" name="ten" class="form-control float-right" placeholder="Search">
-                                <div class="input-group-append">
-                                    <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                                </div>
-                            </div>
-                        </form>
-
-						</div>
-					</div>
-				</div>
-				<div class="card poly-cart" data-toggle="collapse" href="#chungloai">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Danh Mục
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="chungloai">
-					<a th:href="@{/}">
-                        <span th:text="${attr_user} ? ${attr_user.username}"></span>
-                    </a>
-					<a th:href="@{/users/}" class="list-group-item">Tài Khoản</a>
-					<a th:href="@{/citys/}" class="list-group-item ">Thành Phố</a>
-					<a th:href="@{/types/}" class="list-group-item ">Loại Khách Sạn</a>
-					<a th:href="@{/hotels/}" class="list-group-item ">Khách Sạn</a>
-					<a th:href="@{/services/}" class="list-group-item ">Dịch Vụ</a>
-					<a th:href="@{/rooms/}" class="list-group-item ">Phòng</a>
-
-				</ul>
-				<div class="card poly-cart" data-toggle="collapse" href="#nguoidung">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Người Dùng
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="nguoidung">
-					<li class="list-group-item "><i class="fas fa-user"></i> Tài
-						Khoản</li>
-					<li class="list-group-item "><i class="fas fa-cogs"></i> Chưa
-						Nghĩ Ra</li>
-					<a class="list-group-item " th:href="@{/logout}" th:if="${attr_user != null}"><i class="fas fa-sign-out-alt"></i>
-						Đăng Xuất</a>
-
-
-				</ul>
-			</aside>
-			<article class="col-sm-10">
+			
+			<article class="col-sm-12">
 				<div class="card">
 					<div class="card-header">
 					<div th:if="${success}"
@@ -72,15 +23,34 @@
 							</button>
 							<span th:text="${success}"></span>
 						</div>
-
-						<span type="button" class="float-right btn btn-primary btn-sm"
-							data-toggle="modal" data-target="#modelId"> <i
-							class="fas fa-plus"></i> Them Moi
+						<span class="float-left"
+							style="color: snow; display: table-cell; font-size: 26px; font-weight: 700; margin: 0; vertical-align: middle">
+							Quản Lý Khách Sạn </span>
+						<form th:action="@{/hotels/find}" method="post"
+							class="input-group float-left input-group-sm "
+							style="width: 500px; margin-left:200px; padding: 10px">
+								
+							<div class="input-group float-left input-group-sm">
+								<input  type="text" name="ten" class="form-control float-right"
+									placeholder="Search" >
+								<div class="input-group-append">
+									<button type="submit" class="btn btn-default">
+										<i class="fas fa-search"></i>
+									</button>
+								</div>
+							</div>
+						</form>
+						<span type="button" class="float-right btn  btn-sm"
+							data-toggle="modal" data-target="#modelId">  
+							<input type="submit" value="Thêm Mới" class="btn btn-primary"
+												th:if="${id<=0}" /> 
+							<input type="submit" value="Chỉnh Sửa"
+												class="btn btn-primary" th:if="${id>0}" /> 
 						</span>
 						<!-- Modal -->
 						<div class="modal fade" id="modelId" tabindex="-1" role="dialog"
 							aria-labelledby="modelTitleId" aria-hidden="true">
-							<div class="modal-dialog" style="max-width: 700px"
+							<div class="modal-dialog" style="max-width: 700px; margin-top: 200px"
 								role="document">
 
 								<div class="modal-content">
@@ -90,7 +60,7 @@
 										<h3 th:text="${message}"></h3>
 									</div>
 									-->
-										<h5 class="modal-title">Thêm Khách Sạn</h5>
+										<h5 class="modal-title">Khách Sạn</h5>
 										<button type="button" class="close" data-dismiss="modal"
 											aria-label="Close">
 											<span aria-hidden="true">&times;</span>
@@ -145,24 +115,26 @@
 											</div>
 											<div class="form-group row">
 												<label class="col-sm-3"> Hình Ảnh</label>
-												<div class="col-sm-9">
+												<div class="col-sm-8" style="margin-left: 15px">
 										<input type="file" class="custom-file-input" th:field="*{photo}" id="photo" th:required="*{id == 0}">
                                         <label class="custom-file-label" for="photo" th:if="*{imageName}" th:text="*{imageName}"></label>
                                         <label class="custom-file-label" for="photo" th:unless="*{imageName}">choose image</label>
 												</div>
 											</div>
-											<div class="row" style="margin: 5px;">
-												<div class="form-group col-sm-12">
-													<label for="validationTextarea">Mô Tả</label>
-													<textarea  rows="6" class="form-control" th:field="*{mota}"
-														id="mota" placeholder="Mô tả...">
+											<div class="form-group row">
+													<label  class="col-sm-3" for="validationTextarea">Mô Tả</label>
+													<div class="col-sm-9" >
+													<textarea rows="4" class="form-control"
+														id="validationTextarea"
+														placeholder="Required example textarea" th:field="*{mota}">
                                                     </textarea>
+                                                    
 												</div>
 											</div>
 											<div class="form-row">
-												<div class="col-md-3 mb-3">
-													<label>Giap Bien</label>
-													<div class="radio">
+											
+													<label class="col-sm-3">Giáp Biển</label>
+													<div  class="radio col-sm-8">
 														<label class="checkbox-inline"> <input
 															type="radio" th:field="*{cachbien}" name="giapbien"
 															value="1" id="giapbien1" /> Có
@@ -171,16 +143,16 @@
 															checked="checked" value="0" id="giapbien2" /> Không
 														</label>
 													</div>
-
-												</div>
-												<div class="col-md-4 mb-3">
+											</div>
+												<div class="row" style="margin: 5px;">
+												<div class="form-group col-md-6">
 													<label for="validationTooltip02">Đánh Gía</label> <input
 														type="number" id="validationTooltip02"
 														class="form-control" min="0" max="5" th:field="*{danhgia}">
 
 
 												</div>
-												<div class="col-md-4 mb-3">
+												<div class="form-group col-md-6">
 													<label for="validationTooltipUsername">Bữa Ăn</label>
 													<div class="input-group">
 														<input type="text" id="validationTooltip02"
@@ -209,8 +181,8 @@
 												</div>
 											</div>
 
-											<input type="submit" value="Add" class="btn btn-primary"th:if="${id<=0}" /> 
-											<input type="submit" value="Update"
+											<input type="submit" value="Thêm" class="btn btn-primary"th:if="${id<=0}" /> 
+											<input type="submit" value="Chỉnh Sửa"
 												class="btn btn-primary" th:if="${id>0}" /> <a
 												th:href="@{/hotels/}" class="btn btn-outline-secondary">Cancel</a>
 
