--- a/src/main/resources/templates/layouts/admin.html
+++ b/src/main/resources/templates/layouts/admin.html
@@ -17,28 +17,53 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
+	<th:block layout:fragment="css">
+	
+	<link rel="stylesheet" type="text/css" th:href="@{/css/admin.css}" />
+	
+</th:block>
 </head>
-<body class="hold-transition sidebar-mini layout-fixed">
-<div class="wrapper">
 
+<body class="hold-transition sidebar-mini layout-fixed">
+<header>
+		<div class="container">
+			<div class="logo-sec">
+				<a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="" /></a>
+			</div>
+
+			<!-- logo -->
+			<nav>
+				<a class="responsive-menu-btn" href="#" title=""><i
+					class="fa fa-align-justify"></i></a>
+				<ul>
+					<li  class="menu-item-has-children"><a th:href="@{/users/}"
+						>Tài Khoản</a></li>
+					<li class="menu-item-has-children"><a th:href="@{/citys/}" >Thành Phố</a></li>
+					
+					<li class="menu-item-has-children"><a href="#" title=""
+						>Quản Lý Khách Sạn</a>
+						<ul>
+							<li><a th:href="@{/hotels/}">Khách Sạn</a></li>
+							<li><a th:href="@{/types/}">Loại Khách Sạn</a></li>
+							<li><a th:href="@{/rooms/}" >Phòng</a></li>
+						</ul></li>
+					<li class="menu-item-has-children"><a th:href="@{/services/}">Dịch Vụ</a></li>
+					<li class="menu-item-has-children"><a href="404NotFound/404.html" >Thống Kê</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+<div class="wrapper">
+			
+			
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Hotel Manager</a>
-            </li>
-        </ul>
+        
+        
 
         <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link">English</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">VietNamese</a>
-            </li>
-        </ul>
+        
     </nav>
     
     
@@ -63,12 +88,9 @@
     <!-- /.content-wrapper -->
     <footer class="main-footer">
      <div class="container-fluid">
-        <div class="card text-center" style="background-color: mintcream;">
+        <div class="card text-center" style="background-color:#00ff99;">
 			<div class="card-body"></div>
-			<h5 class="card-title" style="line-height: 40px;">
-				Địa chỉ: P.Hòa Minh- Q.Liên Chiểu - TP.Đàn Nẵng<br /> Điện thoại:
-				0235 3881 639<br />
-			</h5>
+			<p class="card-text" style="margin-bottom: 10px;">Phát triển bởi nhóm Booking Hotel</p>
 			<p class="card-text" style="margin-bottom: 10px;">FPT Polytechnic
 				Đà Nẵng © 2020. All rights reserved</p>
 		</div>
