--- a/src/main/resources/templates/services/dsDichvu.html
+++ b/src/main/resources/templates/services/dsDichvu.html
@@ -9,63 +9,12 @@
 	<div layout:fragment="header"></div>
 
 	<div layout:fragment="content">
+		
 		<div class="row">
-			<aside class="col-sm-2">
-				<div class="card poly-cart">
-					<div class="card-body">
-						<div class="row">
-							<form th:action="@{/services/find}" method="post"
-								class="input-group input-group-sm mt-auto" style="width: 200px;">
-								<div class="input-group input-group-sm">
-									<input type="text" name="ten" class="form-control float-right"
-										placeholder="Search">
-									<div class="input-group-append">
-										<button type="submit" class="btn btn-default">
-											<i class="fas fa-search"></i>
-										</button>
-									</div>
-								</div>
-							</form>
-
-						</div>
-					</div>
-				</div>
-				<div class="card poly-cart" data-toggle="collapse" href="#chungloai">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Danh Mục
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="chungloai">
-					<a th:href="@{/users/}" class="list-group-item">Tài Khoản</a>
-					<a th:href="@{/citys/}" class="list-group-item ">Thành Phố</a>
-					<a th:href="@{/types/}" class="list-group-item ">Loại Khách Sạn</a>
-					<a th:href="@{/hotels/}" class="list-group-item ">Khách Sạn</a>
-					<a th:href="@{/services/}" class="list-group-item ">Dịch Vụ</a>
-					<a th:href="@{/rooms/}" class="list-group-item ">Phòng</a>
-
-				</ul>
-				<div class="card poly-cart" data-toggle="collapse" href="#nguoidung">
-					<div class="card-header" style="cursor: pointer;">
-						<i class="fas fa-list-ul"></i> Người Dùng
-					</div>
-				</div>
-				<ul class="list-group collapse show" style="cursor: pointer;"
-					id="nguoidung">
-					<li class="list-group-item "><i class="fas fa-user"></i> TÃ i
-						Khoáº£n</li>
-					<li class="list-group-item "><i class="fas fa-cogs"></i> ChÆ°a
-						NghÄ© Ra</li>
-					<a class="list-group-item " th:href="@{/logout}"
-						th:if="${attr_user != null}"><i class="fas fa-sign-out-alt"></i>
-						ÄÄng Xuáº¥t</a>
-
-
-				</ul>
-			</aside>
-			<article class="col-sm-10">
+			<article class="col-sm-12">
 				<div class="card">
 					<div class="card-header">
+
 						<div th:if="${success}"
 							class="row alert alert-success alert-dismissible">
 							<button type="button" class="close" data-dismiss="alert"
@@ -74,23 +23,45 @@
 							</button>
 							<span th:text="${success}"></span>
 						</div>
-						<span type="button" class="float-right btn btn-primary btn-sm"
-							data-toggle="modal" data-target="#modelId"> <i
-							class="fas fa-plus"></i> Them Moi
+						<!-- chu css  -->
+						<span class="float-left"
+							style="color: snow; display: table-cell; font-size: 26px; font-weight: 700; margin: 0; vertical-align: middle">
+							Quản Lý Dịch Vụ </span>
+						<form th:action="@{/services/find}" method="post"
+							class="input-group float-left input-group-sm "
+							style="width: 500px; margin-left:200px; padding: 10px">
+								
+							<div class="input-group float-left input-group-sm">
+								<input  type="text" name="ten" class="form-control float-right"
+									placeholder="Search" >
+								<div class="input-group-append">
+									<button type="submit" class="btn btn-default">
+										<i class="fas fa-search"></i>
+									</button>
+								</div>
+							</div>
+						</form>
+						<span type="button" class="float-right btn  btn-sm"
+							data-toggle="modal" data-target="#modelId">  
+							<input type="submit" value="Thêm Mới" class="btn btn-primary"
+												th:if="${id<=0}" /> 
+							<input type="submit" value="Chỉnh Sửa"
+												class="btn btn-primary" th:if="${id>0}" /> 
 						</span>
+						
 						<!-- Modal -->
 						<div class="modal fade" id="modelId" tabindex="-1" role="dialog"
 							aria-labelledby="modelTitleId" aria-hidden="true">
-							<div class="modal-dialog" style="max-width: 700px"
+							<div class="modal-dialog" style="max-width: 700px;margin-top: 200px"
 								role="document">
 
 								<div class="modal-content">
 									<div class="modal-header">
-										
-									<div th:if="${message !=null}">
-										<h3 th:text="${message}"></h3>
-									</div>
-												<h5 class="modal-title">Thêm Dịch Vụ</h5>
+
+										<div th:if="${message !=null}">
+											<h3 th:text="${message}"></h3>
+										</div>
+										<h5 class="modal-title"> Dịch Vụ</h5>
 										<button type="button" class="close" data-dismiss="modal"
 											aria-label="Close">
 											<span aria-hidden="true">&times;</span>
@@ -98,7 +69,8 @@
 									</div>
 									<div class="modal-body">
 										<form th:action="@{/services/saveOrUpdate}"
-											th:object="${serviceDto}" method="post" enctype="multipart/form-data">
+											th:object="${serviceDto}" method="post"
+											enctype="multipart/form-data">
 											<div th:if="${id>0}">
 												<div class="form-group row">
 
@@ -117,7 +89,7 @@
 														placeholder="Tên Dịch Vụ...">
 												</div>
 											</div>
-										
+
 											<div class="form-group row">
 												<label class="col-sm-3 col-form-label">Giá Dịch Vụ</label>
 												<div class="col-sm-9">
@@ -125,46 +97,46 @@
 														th:field="*{giadv}" placeholder="Giá Dịch Vụ...">
 												</div>
 											</div>
-											
+
 											<div class="form-group row">
 												<label class="col-sm-3 col-form-label">Mô Tả Dịch Vụ</label>
 												<div class="col-sm-9">
-													<textarea rows="4" class="form-control"
-														id="mota"
+													<textarea rows="4" class="form-control" id="mota"
 														placeholder="Mô tả dịch vụ..." th:field="*{mota}">
                                                     </textarea>
 												</div>
 											</div>
-											
-											 <div class="form-group row">
+
+											<div class="form-group row">
 												<label class="col-sm-3"> Hình Ảnh</label>
-												<div class="col-sm-9">
-											
-                                        			<input type="file" class="custom-file-input" th:field="*{photo}" id="photo" th:required="*{id == 0}">
-                                        			<label class="custom-file-label" for="photo" th:if="*{imageName}" th:text="*{imageName}"></label>
-                                        			<label class="custom-file-label" for="photo" th:unless="*{imageName}" >choose image</label>
+												<div class="col-sm-8" style="margin-left: 15px">
+
+													<input type="file" class="custom-file-input"
+														th:field="*{photo}" id="photo" th:required="*{id == 0}">
+													<label class="custom-file-label" for="photo"
+														th:if="*{imageName}" th:text="*{imageName}"></label> <label
+														class="custom-file-label" for="photo"
+														th:unless="*{imageName}">choose image</label>
+												</div>
 											</div>
-											</div>
-											
-											
+
+
 											<div class="form-group row">
 												<label class="col-sm-3 col-form-label">Khách Sạn</label>
 												<div class="col-sm-9">
-													<select th:field="*{khachsanId}"
-														class="form-control">
+													<select th:field="*{khachsanId}" class="form-control">
 
 														<option th:each="khachsan : ${hotels}"
 															th:value="${khachsan.id}" th:text="${khachsan.ten}"></option>
 													</select>
 												</div>
 											</div>
-											
-										
-											<input type="submit" value="Add" class="btn btn-primary"
-												th:if="${id<=0}" /> 
-											<input type="submit" value="Update"
+
+
+											<input type="submit" value="Thêm" class="btn btn-primary"
+												th:if="${id<=0}" /> <input type="submit" value="Chỉnh Sửa"
 												class="btn btn-primary" th:if="${id>0}" /> <a
-												th:href="@{/services/}" class="btn btn-outline-secondary">Cancel</a>
+												th:href="@{/services/}" class="btn btn-outline-secondary">Thoát</a>
 										</form>
 									</div>
 									<div class="card-footer">
@@ -195,9 +167,9 @@
 						</thead>
 						<tbody>
 							<tr th:each="item: ${services}">
-							<td th:text="${item.id}"></td>
+								<td th:text="${item.id}"></td>
 								<td th:text="${item.ten}"></td>
-								
+
 								<td th:text="${item.giadv} + ' VND'"></td>
 								<td th:text="${item.mota}"></td>
 								<td><img alt="" th:src="@{'/getanh/' +${item.id}}"
@@ -207,21 +179,21 @@
 
 								<td class="text-right py-0 align-middle">
 									<div class="btn-group btn-group-sm">
+
 										<a th:href="@{'/services/edit/' + ${item.id}}"
 											class="btn btn-primary"><i class="fas fa-pencil-alt"></i></a>
 										<a th:href="@{'/services/delete/' + ${item.id}}"
 											class="btn btn-danger"><i class="fas fa-trash"></i></a>
 									</div>
 								</td>
-
 							</tr>
-
 						</tbody>
 					</table>
 
-					<div class="card-footer">
+					<div class="card-footer" style="text-align: center; ">
 
-						<nav aria-label="Contacts Page Navigation" th:if="${services.totalPages}">
+						<nav aria-label="Contacts Page Navigation"
+							th:if="${services.totalPages}">
 							<ul class="pagination justify-content-center m-0">
 								<li
 									th:class="${services.number == 0}?'disabled page-item':'page-item'">
@@ -229,8 +201,8 @@
 								</li>
 								<li
 									th:class="${services.number == 0} ?'disabled page-item':'page-item'"><a
-									class="page-link" th:href="@{/services/(page=${services.number})}">&larr;</a>
-								</li>
+									class="page-link"
+									th:href="@{/services/(page=${services.number})}">&larr;</a></li>
 								<li
 									th:class="${services.number == (page - 1)}?'active page-item':'page-item'"
 									th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
