--- a/src/main/resources/templates/layouts/admin.html
+++ b/src/main/resources/templates/layouts/admin.html
@@ -10,6 +10,7 @@
 
 
 <link rel="stylesheet" href="css/style.css">
+
 <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 <!-- Bootstrap CSS -->
@@ -48,7 +49,7 @@
 							<li><a th:href="@{/rooms/}" >Phòng</a></li>
 						</ul></li>
 					<li class="menu-item-has-children"><a th:href="@{/services/}">Dịch Vụ</a></li>
-					<li class="menu-item-has-children"><a href="404NotFound/404.html" >Thống Kê</a></li>
+					<li class="menu-item-has-children"><a th:href="@{/view/404}" >Thống Kê</a></li>
 				</ul>
 			</nav>
 		</div>
